project(data_structure)
cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 11)

add_executable(
        data_structure
        # test_linked_list.cpp

        # STACK
        # test_stack_linear.cpp
        # test_stack_linked.cpp

        # QUEUE
        # test_queue_linear.cpp
        # test_queue_linked.cpp

        # STRING
        # test_string.cpp

        # TREE
         test_binary_tree.cpp
)